--- a/main.css
+++ b/main.css
@@ -24,17 +24,31 @@ body {
 .BotoesOperacoes {
     padding: 5%;
 }
-.BotoesOperacoes input {
-    width: 58px;
-    height: 49px;
-    margin-left: 23px;
-    font-size: 24px;
+.BotoesOperacoes span {
+    float: left;
+    position: relative;
+    text-align: center;
+    width: 70px;
+    line-height: 82px;
+    height: 70px;
+    margin: 0 7px 11px 0;
+    transform: translate(30px, 10px);
+    font-size: 34px;
+    border-radius: 10px;
+    user-select: none;
+    background-color: lemonchiffon;
 }
-.TecladoNumerico input {
-    width: 98px;
-    height: 81px;
+.TecladoNumerico span {
+    float: left;
+    position: relative;
+    text-align: center;
+    width: 97px;
+    line-height: 82px;
+    height: 74px;
+    margin: 0 7px 11px 0;
     transform: translate(49px, 10px);
-    border-color: rgb(0, 110, 255);
-    border-width: 5px;
-    font-size: 26px;
+    font-size: 34px;
+    border-radius: 10px;
+    user-select: none;
+    background-color: lemonchiffon;
 }
