--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     background-size: cover;
 }
 
-#ContainerPrincipal {
+#QuadradoPrincipalCalculadora {
     top: 50%;
     background-color: rgb(0, 0, 0);
     width: 400px;
@@ -36,7 +36,7 @@ body {
     color: rgb(0, 0, 0)
 }
 
-#EntradaDados {
+#EntradaNumerosNaTelaCalculadora {
     width: 95%;
     height: 94%;
     font-size: 60px;
@@ -47,10 +47,10 @@ body {
     color: rgb(0, 0, 0);
 }
 
-.BotoesOperacoes {
+.BotoesOperacoesMatematicas {
     padding: 5%;
 }
-.BotoesOperacoes span {
+.BotoesOperacoesMatematicas span {
     float: left;
     position: relative;
     font-family: 'Kanit', sans-serif;
@@ -83,4 +83,11 @@ body {
 #GifNazare {
     position: relative;
     left: 70%;
+}
+
+.TituloCalculadoraTop{
+    font-size: 58px;
+    text-align: center;
+    padding-top: 2%;
+    font-family: 'Kanit', sans-serif;
 }
